<resources>
    <string name="app_name">Gobblet</string>
    <string name="ic_pieces_versus">pieces_versus</string>
    <string name="vs">VS</string>
    <string name="ic_volume">volume</string>
    <string name="single_player">Single Player</string>
    <string name="two_players">Two Players</string>
    <string name="peace">Peace</string>
    <string name="player_turn">%1$s\'s turn</string>
    <string name="not_your_turn">It\'s not your turn</string>
    <string name="player_win">%1$s win!</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="quit_game_title">Give up?</string>
    <string name="quit_game_message">Are you sure you want to give up the current game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="setting">Setting</string>
    <string name="board">Board</string>
    <string name="board_3x3">3x3</string>
    <string name="board_4x4">4x4</string>
    <string name="difficulty">Difficulty</string>
    <string name="sound">Sound</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="easy">Easy</string>
    <string name="volume">volume</string>
    <string name="back">back</string>
    <string name="new_game">New Game</string>
</resources>